# labs-

lab0/: module2.cpp
lab0(a)/: main.cpp  module1.cpp  module1.h
lab0/lab0(a)/: module2.h  module3.cpp  module3.h
lab0/lab0(b)/: App.cpp  App.h  CMakeLists.txt  Counter.cpp  Counter.h  Reader.cpp  Reader.h  Splitting.cpp  Splitting.h  WordCount.cpp  Writer.h  Wtiter.cpp  input.txt  main.cpp  output.csv  word_count.cpp
lab1/: .gitignore  BitArray.cpp  BitArray.h  BitArrayDoc.h  CMakeLists.txt  lab1_tests.cpp
lab1/docs/report/: cmd_line
lab1/screen_tests/: 2c0b2294-01fb-4f93-84f2-234fde862fe7.jfif  2ed4524d-73c3-4d26-9410-88a7d5e2376a.jfif  49129443-064c-4f52-b534-9615bbb221d4.jfif  68059854-4038-4cbc-8056-819551828adb.jfif
lab2/: CellFactory.cpp  CellFactory.hpp  Controller.cpp  Controller.hpp  DeadCell.hpp  ICell.hpp  LiveCell.hpp  Model.cpp  Model.hpp  View.cpp  View.hpp  main.cpp
